# RPL

./: .gitignore  MakeFile  README.md  docker-compose.yml  main.py  output_policy.py  pyproject.toml
antlr_tool/: generator.py
app/analyzer/: json_to_object.py  llm_analyzer.py  semantic_analyzer.py
app/api/: admin.py  app.py  dependencies.py  endpoint.py  enforcement.py  files.py  middleware.py
app/api/database/: database.py
app/api/middlewares/: csrf.py  error_handler.py  logging.py  metrics.py  rate_limiting.py  security.py
app/api/models/: entity.py  enums.py  requests.py  responses.py
app/api/policies/: policy_engine.py
app/api/routers/: admin_api.py  auth_api.py  client_db_api.py  file_manager_api.py  mock_api.py  policies.py  resource_api.py  rest_explorer_api.py  rpl_editor_api.py  simulation_api.py  user_api.py
app/api/services/: __init__.py  auth_service.py  compiler_service.py  connection_manager.py  enforcement_service.py  file_manager_service.py  (+9 more)
app/errors/: error_handler.py
app/generator/: code_generator.py
app/infrastructure/: cache.py  config.py  logging_config.py  metrics.py  storage.py
app/models/: auth_models.py  enums.py  error_response.py  folder_location.py  group.py  llm_result.py  permission.py  permission_role_link.py  request.py  resource.py  resourse.py  role.py  user.py  user_role_link.py
app/shell/: command_line.py
parser/: RPLLexer.g4  RPLParser.g4  generator.py  main_test.rpl
parser/.antlr/: RPLLexer.java  RPLParser.java
parsing/: RPLLexer.py  RPLParser.py  RPLParserListener.py  RPLParserVisitor.py
(+24 files in other folders)
