[project]
name = "rpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "prometheus-client>=0.23.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.3",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]
